k8s/services/proxy-client/proxy-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-client
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-client
  template:
    metadata:
      labels:
        app: proxy-client
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: proxy-client
        image: selimhorri/proxy-client-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8900
