k8s/services/proxy-client/proxy-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-client
  namespace: ecommerce-microservice
spec:
  type: NodePort
  selector:
    app: proxy-client
  ports:
  - port: 8900
    targetPort: 8900
    nodePort: 30900
